fix: arruma overflow do texto da publicação, arruma imagem no modo responsivo

--- a/src/components/PostPreview/styles.css
+++ b/src/components/PostPreview/styles.css
@@ -99,6 +99,10 @@
     height: 80%;
 }
 
+.post-content{
+    overflow: hidden;
+}
+
 @media (max-width: 768px) {
     .container-post {
         width: 100%;
@@ -118,7 +122,7 @@
 
     .container-post .post-img img {
         width: 100%;
-        height: 25vw;
+        height: 100%;
         object-fit: cover;
     }
 
